--- a/css/sidemenu_style.css
+++ b/css/sidemenu_style.css
@@ -7,10 +7,25 @@
     top: 0;
     left: 0;
     overflow-x: hidden; /* Disable horizontal scroll */
-    overflow-y: hidden;
+    overflow-y: hidden; /* Disable horizontal scroll */
     padding-top: 48px;  /*Place content 48px from the top */
     transition: 0.3s; /* 0.5 second transition effect to slide in the sidenav */
 
+}
+
+.fixedMenu {
+    width:280px; 
+    float: left; 
+    background: white; 
+    height: 100%; 
+    padding-top: 20px;
+}
+
+.overlayMenu {
+    margin-left:200px; 
+    background: rgba(0, 0, 0, 0.5); 
+    height: 100%;
+    overflow-y: hidden;
 }
 
 
