Adding logic to show details

--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,11 @@ table tr .details {
     padding-bottom: 5px;
 }
 
-.panelLeft {
+.master {
     width: 100%;
 }
 
-.panelRight {
+.details {
     display: none;  
 }
 
