Inser New User form, fix Style

--- a/login/style.css
+++ b/login/style.css
@@ -111,6 +111,10 @@ span.psw {
 }
 
 /* Modal Content/Box */
+
+label{
+    color: black;
+}
 .modal-content {
     background-color: #fefefe;
     margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
