--- a/login/style.css
+++ b/login/style.css
@@ -21,6 +21,7 @@ h3 {
 /* Background */
 
 #LoginForm {
+    
     position: fixed;
     top: 0;
     left: 0;
@@ -34,6 +35,19 @@ h3 {
     color: white;
     flex-direction: column;
 }
+
+/* Basic Demo Styles */
+.site-container {
+    max-width: 320px;
+    margin: 10px auto;
+    padding-left: 0.6em;
+    padding-right: 0.6em;
+  }
+  @media screen and (min-width: 60.063em) {
+    .site-container {
+      max-width: 400px;
+    }
+  }
 
 /* Margin */
 
@@ -109,7 +123,6 @@ span.psw {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 60px;
 }
-
 /* Modal Content/Box */
 
 label{
